umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Structure2D_COMPOUND_CID_8027.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H5N
      atom_count: 10
      bond_count: 10
      property_count: 34
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H5N
      atom_count: 10
      bond_count: 10
      property_count: 34
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H5N
      atom_count: 10
      bond_count: 10
      extended_atoms: 0
      extended_bonds: 0
      property_count: 34
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H5N
      atom_count: 10
      bond_count: 10
      extended_atoms: 0
      extended_bonds: 0
      property_count: 34
      rgroup_count: 0
      sgroup_count: 0
