umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@reaxys_12616923_20260113_042920_039.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4O
      atom_count: 5
      bond_count: 5
      property_count: 10
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4O
      atom_count: 5
      bond_count: 5
      property_count: 10
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4O
      atom_count: 5
      bond_count: 5
      extended_atoms: 0
      extended_bonds: 0
      property_count: 10
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4O
      atom_count: 5
      bond_count: 5
      extended_atoms: 0
      extended_bonds: 0
      property_count: 10
      rgroup_count: 0
      sgroup_count: 0
